--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="input-group">
               <input type="email" class="form-control" placeholder="Type your email..." id="chatInput">
               <div class="input-group-append">
-                <button class="btn btn-primary" type="button" onclick="sendMessage()">Send</button>
+                <button class="btn btn-primary" type="button" onclick="alert('Thank you for your response! We will answer you soon!')">Send</button>
               </div>
             </div>
           </div>
