--- a/menu.html
+++ b/menu.html
@@ -108,11 +108,11 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f2.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Beaf burger</h5>
                   <p style="color: #fff;">
                     Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                   </p>
-                  <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
+                  <a href="#" class="btn btn-warning" style="color: #fff;">1350₸</a>
                 </div>
               </div>
             </div>
@@ -122,9 +122,9 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f3.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Margherita Pizza</h5>
                   <p style="color: #fff;">
-                    Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
+                     Its thin, crispy crust is adorned with a vibrant red tomato sauce, slices of fresh, juicy tomatoes, and generous portions of creamy, milky mozzarella cheese.
                   </p>
                   <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
                 </div>
@@ -136,7 +136,7 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f4.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Pasta</h5>
                   <p style="color: #fff;">
                     Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                   </p>
@@ -150,11 +150,11 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f5.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Fries</h5>
                   <p style="color: #fff;">
                     Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                   </p>
-                  <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
+                  <a href="#" class="btn btn-warning" style="color: #fff;">700₸</a>
                 </div>
               </div>
             </div>
@@ -164,10 +164,9 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f6.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
-                  <p style="color: #fff;">
-                    Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
-                  </p>
+                  <h5 class="card-title" style="color: #fff;">Pepperoni Pizza</h5>
+                  <p style="color: #fff;">The pepperoni pizza boasts a tantalizing combination of zesty flavors. Its doughy base serves as a canvas for a robust layer of tangy tomato sauce, generously topped with savory, thinly sliced pepperoni.
+                                      </p>
                   <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
                 </div>
               </div>
@@ -178,11 +177,11 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f7.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Chicken Burger</h5>
                   <p style="color: #fff;">
                     Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                   </p>
-                  <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
+                  <a href="#" class="btn btn-warning" style="color: #fff;">1200₸</a>
                 </div>
               </div>
             </div>
@@ -192,7 +191,7 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f8.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Fish Burger</h5>
                   <p style="color: #fff;">
                     Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                   </p>
@@ -206,7 +205,7 @@
               <div class="card" style="height: 450px;">
                 <img src="images/f9.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                 <div class="card-body" style="background-color: #222831;">
-                  <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                  <h5 class="card-title" style="color: #fff;">Pasta Lasagna</h5>
                   <p style="color: #fff;">
                     Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                   </p>
