--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="input-group">
               <input type="email" class="form-control" placeholder="Type your email..." id="chatInput">
               <div class="input-group-append">
-                <button class="btn btn-primary" type="button" onclick="alert('Thank you for your response! We will answer you soon!')">Send</button>
+                <button class="btn btn-primary" type="button" onclick="alert('Message sent, we will contact with you later on!')">Send</button>
               </div>
             </div>
           </div>
@@ -254,11 +254,11 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f2.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Beaf burger</h5>
                     <p style="color: #fff;">
                       Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                     </p>
-                    <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
+                    <a href="#" class="btn btn-warning" style="color: #fff;">1350₸</a>
                   </div>
                 </div>
               </div>
@@ -268,9 +268,9 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f3.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Margherita Pizza</h5>
                     <p style="color: #fff;">
-                      Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
+                      Its thin, crispy crust is adorned with a vibrant red tomato sauce, slices of fresh, juicy tomatoes, and generous portions of creamy, milky mozzarella cheese.
                     </p>
                     <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
                   </div>
@@ -282,7 +282,7 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f4.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Pasta</h5>
                     <p style="color: #fff;">
                       Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                     </p>
@@ -296,11 +296,11 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f5.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Fries</h5>
                     <p style="color: #fff;">
                       Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                     </p>
-                    <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
+                    <a href="#" class="btn btn-warning" style="color: #fff;">700₸</a>
                   </div>
                 </div>
               </div>
@@ -310,9 +310,8 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f6.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
-                    <p style="color: #fff;">
-                      Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
+                    <h5 class="card-title" style="color: #fff;">Pepperoni Pizza</h5>
+                    <p style="color: #fff;">The pepperoni pizza boasts a tantalizing combination of zesty flavors. Its doughy base serves as a canvas for a robust layer of tangy tomato sauce, generously topped with savory, thinly sliced pepperoni.
                     </p>
                     <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
                   </div>
@@ -324,11 +323,11 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f7.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Chicken Burger</h5>
                     <p style="color: #fff;">
                       Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                     </p>
-                    <a href="#" class="btn btn-warning" style="color: #fff;">2000₸</a>
+                    <a href="#" class="btn btn-warning" style="color: #fff;">1200₸</a>
                   </div>
                 </div>
               </div>
@@ -338,7 +337,7 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f8.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Fish Burger</h5>
                     <p style="color: #fff;">
                       Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                     </p>
@@ -352,7 +351,7 @@
                 <div class="card" style="height: 450px;">
                   <img src="images/f9.png" class="card-img-top" height="200px" width="inherit" style="transform: scale(0.8);">
                   <div class="card-body" style="background-color: #222831;">
-                    <h5 class="card-title" style="color: #fff;">Pizza</h5>
+                    <h5 class="card-title" style="color: #fff;">Pasta Lasagna</h5>
                     <p style="color: #fff;">
                       Indulge in our savory burgers, a symphony of juicy beef, fresh veggies, and melted cheese. Or savor our pizzas, a perfect fusion of crispy crust, rich sauce, and delightful toppings.
                     </p>
