--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           </div>
         </div>
         <div class="btn-box">
-          <a href=""  data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Play Game </a>
+          <a href="snake.html"  data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Play Game </a>
           <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" 
           style="width: 1200px; margin: 0 auto; overflow: hidden;margin-right: 300px;">
             <div class="modal-dialog" style="width: 1600px; margin: 0 auto;">
